[TD-993] Minor adjustements to cargo files (#874)

--- a/devutils/automation/tasks/cargo/td-build/Cargo.toml
+++ b/devutils/automation/tasks/cargo/td-build/Cargo.toml
@@ -5,6 +5,7 @@
 [package]
 description = "Tabsdata Build Library"
 name = "td-build"
+build = "build.rs"
 
 authors = { workspace = true }
 edition = { workspace = true }
