[TD-999] Manage repositories metadata from variant resources in the Rust side (#881)

--- a/macros/facets/tm-workspace/Cargo.toml
+++ b/macros/facets/tm-workspace/Cargo.toml
@@ -37,6 +37,9 @@ dummy = []
 
 quote = { workspace = true }
 rand = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_yaml = { workspace = true }
+syn = { workspace = true, features = ["full"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
