--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -127,6 +127,9 @@ version = "0.9.2"
 version = "1.0.228"
 features = ["derive"]
 
+[workspace.dependencies.serde_yaml]
+version = "0.9.34"
+
 [workspace.dependencies.syn]
 version = "2.0.108"
 features = ["full"]
