[TD-955] Implement BigQuery Destination (#841)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -234,6 +234,8 @@ jobs:
       IMPORT_AZURE_BASE_URL: ${{ secrets.IMPORT_AZURE_BASE_URL }}
       TRANSPORTER_AZURE_ACCOUNT_KEY: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_KEY }}
       TRANSPORTER_AZURE_ACCOUNT_NAME: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_NAME }}
+      GCP0__BIGQUERY_DATASET: ${{ secrets.GCP0__BIGQUERY_DATASET }}
+      GCP0__BIGQUERY_PROJECT: ${{ secrets.GCP0__BIGQUERY_PROJECT }}
       GCP0__GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP0__GCP_SERVICE_ACCOUNT_KEY }}
       GCP0__GCP_STORAGE_URI: ${{ secrets.GCP0__GCP_STORAGE_URI }}
       DBX0__CATALOG: ${{ secrets.DBX0__CATALOG }}
