--- a/requirements/requirements-third-party-all.txt
+++ b/requirements/requirements-third-party-all.txt
@@ -3,6 +3,7 @@
 #
 
 -r requirements-third-party.txt
+-r ../connectors/python/tabsdata_bigquery/requirements/requirements-third-party.txt
 -r ../connectors/python/tabsdata_databricks/requirements/requirements-third-party.txt
 -r ../connectors/python/tabsdata_mongodb/requirements/requirements-third-party.txt
 -r ../connectors/python/tabsdata_mssql/requirements/requirements-third-party.txt
