--- a/extensions/python/td-lib/te_tableframe/pytest.ini
+++ b/extensions/python/td-lib/te_tableframe/pytest.ini
@@ -8,6 +8,7 @@ markers =
     agent: mark tests that require the tabsdata agent.
     ai_provider: mark tests that require an ai provider (accepted values: openai).
     azure: mark tests that require credentials to Azure.
+    bigquery: mark tests that require the tabsdata_bigquery package.
     chipset: test that might give false positives or negatives due to chipset behaviour (specially on numbers precision).
     config_resolver: tests for the config_resolver tool in tabsserver.
     databricks: mark tests that require the tabsdata_databricks package.
