--- a/macros/Cross.toml
+++ b/macros/Cross.toml
@@ -88,6 +88,8 @@ passthrough = [
     "IMPORT_AZURE_BASE_URL",
     "TRANSPORTER_AZURE_ACCOUNT_KEY",
     "TRANSPORTER_AZURE_ACCOUNT_NAME",
+    "GCP0__BIGQUERY_DATASET",
+    "GCP0__BIGQUERY_PROJECT",
     "GCP0__GCP_SERVICE_ACCOUNT_KEY",
     "GCP0__GCP_STORAGE_URI",
     "DBX0__CATALOG",
