[TD-1017] Configure pytest tests based on Rust code (polars) to be more verbose when failling (#897)

--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -40,3 +40,7 @@ addopts = --tb=auto
 
 # Use this one for better troubleshooting in integration or release builds.
 # addopts = --tb=auto --capture=tee-sys -s --log-cli-level=DEBUG
+
+env =
+    RUST_BACKTRACE=full
+    POLARS_VERBOSE=1
