[TD-1015] Clean up and fix shutdown signaling in apiserver (#895)

--- a/server/libraries/td-apiserver/Cargo.toml
+++ b/server/libraries/td-apiserver/Cargo.toml
@@ -78,6 +78,7 @@ axum-extra = { workspace = true, features = ["query"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
 chrono = { workspace = true }
 clap = { workspace = true }
+futures = { workspace = true }
 http = { workspace = true }
 nonempty = { workspace = true, features = ["serialize"] }
 reqwest = { workspace = true }
