[TD-1019] Cargo lock with fixed hyper version 1.7.0 (#899)

--- a/make/make-os/fragments/tasks/lock_rs.toml
+++ b/make/make-os/fragments/tasks/lock_rs.toml
@@ -19,6 +19,9 @@ script = [
 
     debug "🚀 cargo update --verbose -p planus --precise 1.1.1"
     exit_code = exec --get-exit-code cargo update --verbose -p planus --precise 1.1.1
+
+    debug "🚀 cargo update --verbose -p hyper --precise 1.7.0"
+    exit_code = exec --get-exit-code cargo update --verbose -p hyper --precise 1.7.0
     ''']
 
 
@@ -39,6 +42,9 @@ script = [
 
     debug "🚀 cargo update --verbose -p planus --precise 1.1.1"
     exit_code = exec --get-exit-code cargo update --verbose -p planus --precise 1.1.1
+
+    debug "🚀 cargo update --verbose -p hyper --precise 1.7.0"
+    exit_code = exec --get-exit-code cargo update --verbose -p hyper --precise 1.7.0
     ''']
 
 [tasks.__os__lock_rs_expansions]
@@ -58,4 +64,7 @@ script = [
 
     debug "🚀 cargo update --verbose -p planus --precise 1.1.1"
     exit_code = exec --get-exit-code cargo update --verbose -p planus --precise 1.1.1
+
+    debug "🚀 cargo update --verbose -p hyper --precise 1.7.0"
+    exit_code = exec --get-exit-code cargo update --verbose -p hyper --precise 1.7.0
     ''']
