--- a/connectors/python/tabsdata_bigquery/pytest.ini
+++ b/connectors/python/tabsdata_bigquery/pytest.ini
@@ -40,3 +40,7 @@ addopts = --tb=auto
 
 # Use this one for better troubleshooting in integration or release builds.
 # addopts = --tb=auto --capture=tee-sys -s --log-cli-level=DEBUG
+
+env =
+    RUST_BACKTRACE=full
+    POLARS_VERBOSE=1
