--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -223,7 +223,7 @@ jobs:
       - permit-job
       - describe-job
     if: ${{ needs.permit-job.outputs.permit_workflow == 'true' }}
-    uses: tabsdata/tabsdata-ci/.github/workflows/make.yml@main
+    uses: tabsdata/tabsdata-ci/.github/workflows/make.yml@1.5.1
     secrets:
       PAT_AOINOKIMI: ${{ secrets.PAT_AOINOKIMI }}
       S30__S3_ACCESS_KEY: ${{ secrets.S30__S3_ACCESS_KEY }}
