--- a/make/make-os/fragments/tasks/lock_rs.toml
+++ b/make/make-os/fragments/tasks/lock_rs.toml
@@ -20,6 +20,9 @@ script = [
     debug "🚀 cargo update --verbose -p planus --precise 1.1.1"
     exit_code = exec --get-exit-code cargo update --verbose -p planus --precise 1.1.1
 
+    debug "🚀 cargo update --verbose -p hyper-util --precise 0.1.17"
+    exit_code = exec --get-exit-code cargo update --verbose -p hyper-util --precise 0.1.17
+
     debug "🚀 cargo update --verbose -p hyper --precise 1.7.0"
     exit_code = exec --get-exit-code cargo update --verbose -p hyper --precise 1.7.0
     ''']
@@ -43,6 +46,9 @@ script = [
     debug "🚀 cargo update --verbose -p planus --precise 1.1.1"
     exit_code = exec --get-exit-code cargo update --verbose -p planus --precise 1.1.1
 
+    debug "🚀 cargo update --verbose -p hyper-util --precise 0.1.17"
+    exit_code = exec --get-exit-code cargo update --verbose -p hyper-util --precise 0.1.17
+
     debug "🚀 cargo update --verbose -p hyper --precise 1.7.0"
     exit_code = exec --get-exit-code cargo update --verbose -p hyper --precise 1.7.0
     ''']
@@ -64,6 +70,9 @@ script = [
 
     debug "🚀 cargo update --verbose -p planus --precise 1.1.1"
     exit_code = exec --get-exit-code cargo update --verbose -p planus --precise 1.1.1
+
+    debug "🚀 cargo update --verbose -p hyper-util --precise 0.1.17"
+    exit_code = exec --get-exit-code cargo update --verbose -p hyper-util --precise 0.1.17
 
     debug "🚀 cargo update --verbose -p hyper --precise 1.7.0"
     exit_code = exec --get-exit-code cargo update --verbose -p hyper --precise 1.7.0
