[TD-1049] Enforce use of tabsdata current version dependencies in functions from older tabsdata versions (#929)

--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,7 @@ target/
 Thumbs.db
 variant/assets/manifest/SOURCETRACK.yaml
 variant/assets/manifest/THIRD-PARTY
+variant/resources/lock/requirements.txt
 var/
 venv.bak/
 venv/
