--- a/make/make-os/fragments/tasks/audit_py.toml
+++ b/make/make-os/fragments/tasks/audit_py.toml
@@ -17,8 +17,8 @@ script = [
 
     requirements-third-party-all-path = temp_file txt
     info "🌤  Using temporary file at ${requirements-third-party-all-path} for requirements-third-party-all.txt"
-    info "🚀 uv pip compile --format requirements.txt --no-strip-extras --quiet --output-file ${requirements-third-party-all-path} ./requirements/requirements-third-party-all.txt"
-    exec --fail-on-error uv pip compile --format requirements.txt --no-strip-extras --quiet --output-file ${requirements-third-party-all-path} ./requirements/requirements-third-party-all.txt
+    info "🚀 uv pip compile --format requirements.txt --quiet --output-file ${requirements-third-party-all-path} ./requirements/requirements-third-party-all.txt"
+    exec --fail-on-error uv pip compile --format requirements.txt --quiet --output-file ${requirements-third-party-all-path} ./requirements/requirements-third-party-all.txt
 
     file_is_empty = is_file_empty ${requirements-third-party-all-path}
     if ${file_is_empty}
@@ -33,8 +33,8 @@ script = [
 
     requirements-dev-third-party-path = temp_file txt
     info "🌦  Using temporary file at ${requirements-dev-third-party-path} for requirements-dev-third-party.txt"
-    info "🚀 uv pip compile --format requirements.txt --no-strip-extras --quiet --output-file ${requirements-dev-third-party-path} ./requirements/requirements-dev-third-party.txt"
-    exec --fail-on-error uv pip compile --format requirements.txt --no-strip-extras --quiet --output-file ${requirements-dev-third-party-path} ./requirements/requirements-dev-third-party.txt
+    info "🚀 uv pip compile --format requirements.txt --quiet --output-file ${requirements-dev-third-party-path} ./requirements/requirements-dev-third-party.txt"
+    exec --fail-on-error uv pip compile --format requirements.txt --quiet --output-file ${requirements-dev-third-party-path} ./requirements/requirements-dev-third-party.txt
 
     file_is_empty = is_file_empty ${requirements-dev-third-party-path}
     if ${file_is_empty}
