[TD-1051] Adapt books to mdbook 5.0.0 (#931)

--- a/extensions/python/td-lib/te_examples/tabsdata/extensions/_examples/guides/book.toml
+++ b/extensions/python/td-lib/te_examples/tabsdata/extensions/_examples/guides/book.toml
@@ -5,15 +5,12 @@
 [book]
 authors = ["Tabs Data Inc."]
 language = "en"
-multilingual = false
 src = "src"
 title = "Tabsdata Examples Guide"
 
-[preprocessor.image-size]
-
-[preprocessor.toc]
-command = "mdbook-toc"
-renderer = ["html"]
+# [preprocessor.toc]
+# command = "mdbook-toc"
+# renderer = ["html"]
 
 [output.html]
 additional-css = ["./theme/custom.css"]
